Fixed container height, search result spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,5 +15,6 @@
 /*Temp background on container for main content to make it readable*/
 .container {
 	background-color: rgb(248, 248, 248);
-	height: 500px;
+	height: 100%;
+  padding: 10px;
 }
